Bug 153574 - crash on KDE login
Summary: crash on KDE login
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: George Staikos
URL:
Keywords:
: 155975 156149 156168 157615 157632 158493 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-06 18:09 UTC by Shieldfire
Modified: 2008-02-27 10:03 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
GDB log (9.44 KB, text/plain)
2008-02-09 09:44 UTC, Saeid Zebardast
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shieldfire 2007-12-06 18:09:23 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

Left open from earlier session crashed on login.

[?1034h(no debugging symbols found)
Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 0xb60036d0 (LWP 3580)]
0xffffe410 in __kernel_vsyscall ()
[Current thread is 0 (process 3580)]

Thread 1 (Thread 0xb60036d0 (LWP 3580)):
#0  0xffffe410 in __kernel_vsyscall ()
#1  0xb64248b0 in nanosleep () from /lib/libc.so.6
#2  0xb64246b7 in sleep () from /lib/libc.so.6
#3  0xb7a42b89 in ?? () from /usr/lib/libkdeui.so.5
#4  0x00000001 in ?? ()
#5  0x00000000 in ?? ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 1 Ondrej Cernos 2007-12-15 13:07:28 UTC
kwallet crashes for me on login too (kopete tries to access it), here's my backtrace for it:

Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1239472432 (LWP 6365)]
[KCrash handler]
#9  0x0805e664 in ~KWalletManager (this=0xbfc157c4)
    at /home/kde-devel/kde/src/KDE/kdeutils/kwallet/kwalletmanager.cpp:158
#10 0x08061f17 in main (argc=)
    at /home/kde-devel/kde/src/KDE/kdeutils/kwallet/main.cpp:94
#0  0xb7ef9410 in ?? ()
Comment 2 Klaus Dimde 2007-12-22 18:24:07 UTC
Same problem for me. Same backtrace as Comment 1
Comment 3 Stephen 2008-01-02 09:05:28 UTC
I've been experiencing this bug as well, same backtrace.

Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1239127856 (LWP 13060)]
[KCrash handler]
#6  0x0805e1c9 in ~KWalletManager (this=0xbf848768)
    at /home/stephen/kdesvn/kdeutils/kwallet/kwalletmanager.cpp:158
#7  0x08062d63 in main (argc=3, argv=0xbf848934)
    at /home/stephen/kdesvn/kdeutils/kwallet/main.cpp:94
#0  0xffffe410 in __kernel_vsyscall ()
Comment 4 Dario Panico 2008-01-02 18:09:06 UTC
same thing happen with kde4:
Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 47664486300880 (LWP 18920)]
[KCrash handler]
#5  0x0000000000663670 in ?? ()
#6  0x000000000041bd12 in KWalletManager::~KWalletManager ()
#7  0x00000000004204e1 in main ()
#0  0x00002b59bc5722b0 in nanosleep () from /lib/libc.so.6
Comment 5 Dario Panico 2008-01-02 18:11:57 UTC
I forgot to say that it happens EVERY login:
KDE 3.97.1 (KDE 4.0 >= 20071214) on Kubuntu Gutsy
Comment 6 sts 2008-01-05 16:33:24 UTC
here the same with kde 3.97.2 (KDE 4.0 >= 20080101 ) "release 4.1"
Comment 7 Laurens Vanhove 2008-01-08 08:27:11 UTC
Same here : kde4 svn trunk from 2008-01-07, on gentoo, gcc 4.1.2
When kwalletmanager is running on logout (and get saved in the session) it always crashes when restarted on the next login.
Kwalletmanager works perfectly when it's started manually or autostarted by konqueror.

So the problem seems to be in the session handling.
Comment 8 András Manţia 2008-01-09 16:48:51 UTC
Let's confirm it, as it crashes for me as well. :)
Comment 9 András Manţia 2008-01-09 17:29:37 UTC
SVN commit 758927 by amantia:

Initialize variable to avoid crash on session restoration.
Backport will follow later.

BUG: 153574

 M  +1 -0      kwalletmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=758927
Comment 10 Tommi Tervo 2008-01-17 10:41:58 UTC
*** Bug 155975 has been marked as a duplicate of this bug. ***
Comment 11 Pino Toscano 2008-01-19 00:25:26 UTC
*** Bug 156149 has been marked as a duplicate of this bug. ***
Comment 12 Tommi Tervo 2008-01-22 09:07:31 UTC
*** Bug 156168 has been marked as a duplicate of this bug. ***
Comment 13 Aldoo 2008-02-06 22:06:37 UTC
Is it really fixed ?
I still have that crash in KDE 4.0.1.
Comment 14 karl sebastian liebich 2008-02-07 11:56:58 UTC
Same here. Seems not to be fixed..
Comment 15 András Manţia 2008-02-07 21:36:58 UTC
Please post a backtrace with the crash.
Comment 16 Saeid Zebardast 2008-02-09 09:31:29 UTC
Same problem for me.
KDE Wallet manager version: 1.1
KDE version: 4.0.1

backtrace:
(no debugging symbols found)
Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread -1246091584 (LWP 6922)]
(no debugging symbols found)
0xffffe410 in __kernel_vsyscall ()
[Current thread is 0 (process 6922)]

Thread 1 (Thread -1246091584 (LWP 6922)):
#0  0xffffe410 in __kernel_vsyscall ()
#1  0xb690ce70 in nanosleep () from /lib/tls/i686/cmov/libc.so.6
#2  0xb690cca7 in sleep () from /lib/tls/i686/cmov/libc.so.6
#3  0xb7a94300 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#4  0x00000001 in ?? ()
#5  0x00000000 in ?? ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 17 Saeid Zebardast 2008-02-09 09:44:43 UTC
Created attachment 23493 [details]
GDB log

GDM log
Comment 18 Pino Toscano 2008-02-10 18:28:49 UTC
*** Bug 157615 has been marked as a duplicate of this bug. ***
Comment 19 Juan Luis Rodríguez 2008-02-19 08:55:43 UTC
I have the same problem.
Backtrace:
(no debugging symbols found)
Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1245374784 (LWP 6205)]
0xffffe410 in __kernel_vsyscall ()
[Current thread is 0 (process 6205)]

Thread 1 (Thread -1245374784 (LWP 6205)):
#0  0xffffe410 in __kernel_vsyscall ()
#1  0xb69bbe70 in nanosleep () from /lib/tls/i686/cmov/libc.so.6
#2  0xb69bbca7 in sleep () from /lib/tls/i686/cmov/libc.so.6
#3  0xb7b43300 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#4  0x00000001 in ?? ()
#5  0x00000000 in ?? ()
#0  0xffffe410 in __kernel_vsyscall ()

Comment 20 Tommi Tervo 2008-02-27 10:03:21 UTC
*** Bug 157632 has been marked as a duplicate of this bug. ***
Comment 21 Tommi Tervo 2008-02-27 10:03:32 UTC
*** Bug 158493 has been marked as a duplicate of this bug. ***