Initialize variable to avoid crash on session restoration. Backport will follow later.

BUG: 153574

svn path=/trunk/KDE/kdeutils/kwallet/; revision=758927